first functional app

--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 	<body>
 		<header>
 			<h1>Etch-A-Sketch</h1>
+			<div id="controls">
+				<button id="reset">Reset</button>
+			</div>
+			<p class="showGridSize">Grid size: </p>
 		</header>
 		
 		<section>
 			<div id="container">
-				<div class="squre"></div>
 				<!-- new divs go here-->
 			</div>
 		</section>
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
 		</script>
-		<script src="scripts/application.js"></script>
+		<script type="text/javascript" src="scripts/application.js"></script>
 	</body>
 </html>
