Final - simple version 1.0.0

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				<button id="reset">Reset</button>
 			</div>
 			<p class="showGridSize">Grid size: </p>
+			<p>Drag your mouse over the grid to sketch.</p>
 		</header>
 		
 		<section>
